# syncbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Spec.md  docker-compose.yml  pyproject.toml
deploy/cron/: spotify-soundeo-sync.cron
deploy/systemd/: spotify-soundeo-sync.service  spotify-soundeo-sync.service.host  spotify-soundeo-sync.timer
scripts/: bootstrap_server.sh  run_local_checks.sh
src/app/: __init__.py  cli.py  config.py  logging_setup.py  models.py
src/app/integrations/: soundeo.py  spotify.py
src/app/matching/: __init__.py  matcher.py  normalizer.py
src/app/services/: reporting.py  runner.py
src/app/storage/: repository.py  schema.py
tests/: test_matcher.py  test_normalizer.py  test_runner.py  test_soundeo_search_queries.py
