[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-soundeo-sync"
version = "0.1.0"
description = "Sync Spotify liked tracks with Soundeo through browser automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
automation = [
  "playwright>=1.52.0",
]
matching = [
  "rapidfuzz>=3.13.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
